tests/reference/asr-test_set2-d91a6f0.stderr
semantic error: Call to set.remove must have exactly one argument
 --> tests/errors/test_set2.py:6:5
  |
6 |     a.remove('error', 'error2')
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
